# spotMini_make_walk_training

./: README.md
cad_files/v1.02/: mini_spot v6.f3d
spotMini_Training/gym_3/: CPGenerator.py  mark_data.txt  mark_gym_3.py  mark_leg.py  mark_robot.py  math.py
spotMini_Training/urdf/: rex.urdf
spotMini_Training/urdf/10/: base_link.stl  slope.urdf
spotMini_Training/urdf/3/: base_link.stl  hello_bullet.py  slope.urdf
spotMini_Training/urdf/5/: base_link.stl  slope.urdf
spotMini_Training/urdf/stl/: LICENSE.txt  README.txt  foot.stl  frontpart.stl  larm.stl  larm_cover.stl  lfoot.stl  mainbody.dae  mainbody.stl  rarm.stl  rarm_cover.stl  rear2.stl  rearmain.stl  rfoot.stl  rplidar_main.stl  rshoulder.stl
spotMini_controller/src/Pose/: package.xml  setup.cfg  setup.py
spotMini_controller/src/joystick_ros2/: joystick_ros2.py
spotMini_controller/src/motor_controller/: package.xml  setup.py
spotMini_controller/src/motor_msg/: CMakeLists.txt  package.xml
spotMini_controller/src/spot_controller/: package.xml  setup.cfg  setup.py
spotMini_driver/Pose/: package.xml  setup.cfg  setup.py
spotMini_driver/Pose/Pose/: pose_controller.py  sensor_data.py
spotMini_driver/motor_msg/: CMakeLists.txt  package.xml
spotMini_driver/motor_msg/msg/: MotorAngles.msg  MotorAngles2T.msg
spotMini_driver/robot_state/: package.xml  setup.cfg  setup.py
spotMini_driver/robot_state/launch/: ppo_control.launch.py  robot_state.launch.py
spotMini_driver/robot_state/robot_state/: CPGenerator.py  PPO_controller.py  jy901b.py  motors_start.py  spot_leg.py
(+30 files in other folders)
